# toml-rs

./: .clippy.toml  .gitignore  .ruff.toml  .typos.toml  CONTRIBUTING.md  Cargo.toml  PGO_BUG_REPORT.md  README.md  noxfile.py  pyproject.toml  ruff.toml  rumdl.toml  ty.toml  x.py
.cargo/: config.toml
.github/: dependabot.yml
.github/actions/build-pgo-wheel/: action.yaml  generate-pgo-data.sh  pgo.py  pgo.sh
.github/actions/git-tag-version/: action.yml
.github/docker/: Dockerfile
.github/scripts/: build_with_pgo.py  test_wasm_wheel.mjs
.github/scripts/alpine/: Dockerfile  entrypoint.sh
.github/workflows/: CI.yml  android.yaml  ci.yaml  ci.yml  ios.yaml  linux.yaml  linux.yml  macos.yaml  macos.yml  manylinux.yaml  musllinux.yaml  musllinux.yml  publish.yml  relator.yaml  tests.yaml  tests.yml  wasm.yaml  wasm.yml  windows.yaml  windows.yml
benchmark/: README.md  pgo.py  run.py
py-src/toml_rs/: __init__.py  _lib.py  _toml_rs.pyi
python/toml_rs/: __init__.py
src/: conversion.rs  core.rs  document.rs  dumps.rs  error.rs  lib.rs  loads.rs  macros.rs  normalize.rs  pretty.rs  recursion_guard.rs  v1.rs  v1_1.rs
src/core/: loads.rs  macros.rs  metadata.rs
src/core/macros/: dumps.rs  loads.rs  pretty.rs
src/v1/: dumps.rs  loads.rs  macros.rs  metadata.rs  pretty.rs
src/v1_0_0/: dumps.rs
src/v1_1/: dumps.rs  loads.rs  macros.rs  metadata.rs  pretty.rs
src/v1_1_0/: loads.rs
tests/: burntsushi.py  conftest.py  helpers.py  test_compatibility.py  test_data.py  test_data_1.py  test_dumps.py  test_error.py  test_metadata.py  test_misc.py  test_wasm.py
tests/data/dumps/: test_dumps.toml  test_dumps_inline_tables.toml  test_dumps_inline_tables[1].toml  test_dumps_inline_tables[2].toml  test_dumps_pretty[pretty=False].toml  test_dumps_pretty[pretty=True].toml  test_dumps_pretty_with_inline_tables.toml
