[build-system]
requires = ["maturin == 1.13.3"]
build-backend = "maturin"

[tool.maturin]
python-source = "py-src"
module-name = "toml_rs._toml_rs"

[project]
name = "toml-rs"
dynamic = ["version"]
requires-python = ">=3.10"
description = "A High-Performance TOML Parser for Python written in Rust"
readme = "README.md"
license = "Unlicense"
license-files = ["UNLICENSE"]
authors = [
    { name = "chirizxc", email = "chirizxc@proton.me" }
]
classifiers = [
    "Typing :: Typed",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
]

[dependency-groups]
typos = ["typos == 1.46.3"]
zizmor = ["zizmor == 1.25.2"]
rumdl = ["rumdl == 0.2.3"]
maturin = ["maturin == 1.13.3"]
pytest = ["pytest == 9.0.3"]
tomli-w = ["tomli-w == 1.2.0"]
wasm-test = [
    { include-group = "pytest" },
    "pytest-pyodide == 0.59.2",
    "pytest-httpserver == 1.1.5",
]
nox = [
    { include-group = "pytest" },
    { include-group = "tomli-w" },
]
ci = [
    "ty == 0.0.40",
    "ruff == 0.15.15",
    "nox == 2026.4.10",
    { include-group = "nox" },
    { include-group = "maturin" },
]
dev = [
    { include-group = "ci" },
    { include-group = "nox" },
    { include-group = "typos" },
    { include-group = "rumdl" },
    { include-group = "zizmor" },
]
bench = [
    "pytomlpp",
    "toml",
    "tomlkit",
    "qtoml",
    "rtoml",
    "tomli ; python_version<'3.11'",
    "tomli-w",
    "polars == 1.41.1",
    "altair == 6.1.0",
    "vl-convert-python == 1.9.0.post1",
    "py-cpuinfo == 9.0.0",
]

[tool.uv.dependency-groups]
wasm-test = { requires-python = ">=3.11" }

[project.urls]
Source = "https://github.com/lava-sh/toml-rs"
Homepage = "https://github.com/lava-sh/toml-rs"
"Bug Tracker" = "https://github.com/lava-sh/toml-rs/issues"
