[build-system]
requires = ["maturin == 1.14.1"]
build-backend = "maturin"

[tool.maturin]
python-source = "py-src"
module-name = "toml_rs._toml_rs"

[project]
name = "toml-rs"
dynamic = ["version"]
requires-python = ">= 3.10"
description = "A High-Performance TOML Parser for Python written in Rust"
readme = { file = "README.md", content-type = "text/markdown" }
license = "Unlicense"
license-files = ["UNLICENSE"]
authors = [
    { name = "chirizxc", email = "chirizxc@proton.me" }
]
keywords = [
    "toml",
    "parser",
]
classifiers = [
    "Typing :: Typed",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
    "Development Status :: 5 - Production/Stable",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/lava-sh/toml-rs"
Repository = "https://github.com/lava-sh/toml-rs"
Issues = "https://github.com/lava-sh/toml-rs/issues"

[dependency-groups]
typos = ["typos == 1.47.2"]
zizmor = ["zizmor == 1.26.1"]
rumdl = ["rumdl == 0.2.22"]
maturin = [
    "maturin == 1.14.1 ; sys_platform != 'linux'",
    "maturin[patchelf] == 1.14.1 ; sys_platform == 'linux'",
]
pytest = ["pytest == 9.1.1"]
tomli-w = ["tomli-w == 1.2.0"]
wasm-test = [
    { include-group = "pytest" },
    "pytest-pyodide == 0.59.2",
    "pytest-httpserver == 1.1.5",
]
nox = [
    { include-group = "pytest" },
    { include-group = "tomli-w" },
]
ci = [
    "ty == 0.0.53",
    "ruff == 0.15.19",
    "nox == 2026.4.10",
    { include-group = "nox" },
    { include-group = "maturin" },
]
dev = [
    { include-group = "ci" },
    { include-group = "nox" },
    { include-group = "typos" },
    { include-group = "rumdl" },
    { include-group = "zizmor" },
]
bench = [
    "pytomlpp",
    "toml",
    "tomlkit",
    "qtoml",
    "rtoml",
    "tomli ; python_version < '3.11'",
    "tomli-w",
    "polars == 1.42.0",
    "altair == 6.2.2",
    "vl-convert-python == 1.9.0.post1",
    "py-cpuinfo == 9.0.0",
]

[tool.uv.dependency-groups]
wasm-test = { requires-python = ">= 3.13" }
